==> DFRobot/K10_Micropython/lib/micropython/ports/esp32/machine_i2s.c <==
#include "py/mphal.h"
#include "driver/i2s_std.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/queue.h"
#include "esp_task.h"
#define I2S_TASK_PRIORITY        (ESP_TASK_PRIO_MIN + 1)
#define I2S_TASK_STACK_SIZE      (2048)
#define DMA_BUF_LEN_IN_I2S_FRAMES (256)
#define SIZEOF_TRANSFORM_BUFFER_IN_BYTES (240)

static void mp_machine_i2s_init_helper(machine_i2s_obj_t *self, mp_arg_val_t *args) {
    // are Pins valid?
    int8_t sck = args[ARG_sck].u_obj == MP_OBJ_NULL ? -1 : machine_pin_get_id(args[ARG_sck].u_obj);
    int8_t ws = args[ARG_ws].u_obj == MP_OBJ_NULL ? -1 : machine_pin_get_id(args[ARG_ws].u_obj);
    int8_t sd = args[ARG_sd].u_obj == MP_OBJ_NULL ? -1 : machine_pin_get_id(args[ARG_sd].u_obj);

    // is Mode valid?
    int8_t mode = args[ARG_mode].u_int;
    if ((mode != (MICROPY_PY_MACHINE_I2S_CONSTANT_RX)) &&
        (mode != (MICROPY_PY_MACHINE_I2S_CONSTANT_TX))) {
        mp_raise_ValueError(MP_ERROR_TEXT("invalid mode"));
    }

    // is Bits valid?
    i2s_data_bit_width_t bits = args[ARG_bits].u_int;
    if ((bits != I2S_DATA_BIT_WIDTH_16BIT) &&
        (bits != I2S_DATA_BIT_WIDTH_32BIT)) {
        mp_raise_ValueError(MP_ERROR_TEXT("invalid bits"));
    }

    // is Format valid?
    format_t format = args[ARG_format].u_int;
    if ((format != STEREO) &&
        (format != MONO)) {
        mp_raise_ValueError(MP_ERROR_TEXT("invalid format"));
    }

    // is Rate valid?
    // Not checked:  ESP-IDF I2S API does not indicate a valid range for sample rate

    // is Ibuf valid?
    // Not checked: ESP-IDF I2S API will return error if requested buffer size exceeds available memory

    self->sck = sck;
    self->ws = ws;
    self->sd = sd;
    self->mode = mode;
    self->bits = bits;
    self->format = format;
    self->rate = args[ARG_rate].u_int;
    self->ibuf = args[ARG_ibuf].u_int;
    self->callback_for_non_blocking = MP_OBJ_NULL;
    self->non_blocking_mode_queue = NULL;
    self->non_blocking_mode_task = NULL;
    self->io_mode = BLOCKING;
    self->is_deinit = false;

    if (mode == MICROPY_PY_MACHINE_I2S_CONSTANT_TX) {
        self->dma_buffer_status = DMA_MEMORY_NOT_FULL;
    } else { // rx
        self->dma_buffer_status = DMA_MEMORY_NOT_EMPTY;
    }

    i2s_chan_config_t chan_config = I2S_CHANNEL_DEFAULT_CONFIG(self->i2s_id, I2S_ROLE_MASTER);
    chan_config.dma_desc_num = get_dma_buf_count(mode, bits, format, self->ibuf);
    chan_config.dma_frame_num = DMA_BUF_LEN_IN_I2S_FRAMES;
    chan_config.auto_clear = true;

    if (mode == MICROPY_PY_MACHINE_I2S_CONSTANT_TX) {
        ESP_ERROR_CHECK(i2s_new_channel(&chan_config, &self->i2s_chan_handle, NULL));
    } else { // rx
        ESP_ERROR_CHECK(i2s_new_channel(&chan_config, NULL, &self->i2s_chan_handle));
    }

    i2s_std_slot_config_t slot_cfg = I2S_STD_PHILIPS_SLOT_DEFAULT_CONFIG(get_dma_bits(mode, bits), get_dma_format(mode, format));
    slot_cfg.slot_mask = I2S_STD_SLOT_BOTH;

    i2s_std_config_t std_cfg = {
        .clk_cfg = I2S_STD_CLK_DEFAULT_CONFIG(self->rate),
        .slot_cfg = slot_cfg,
        .gpio_cfg = {
            .mclk = GPIO_NUM_3,
            .bclk = self->sck,
            .ws = self->ws,
            .invert_flags = {
                .mclk_inv = false,
                .bclk_inv = false,
                .ws_inv = false,
            },
        },
    };

    if (mode == MICROPY_PY_MACHINE_I2S_CONSTANT_TX) {
        std_cfg.gpio_cfg.dout = self->sd;
        std_cfg.gpio_cfg.din = I2S_GPIO_UNUSED;
    } else { // rx
        std_cfg.gpio_cfg.dout = I2S_GPIO_UNUSED;
        std_cfg.gpio_cfg.din = self->sd;
    }

    ESP_ERROR_CHECK(i2s_channel_init_std_mode(self->i2s_chan_handle, &std_cfg));
    ESP_ERROR_CHECK(i2s_channel_register_event_callback(self->i2s_chan_handle, &i2s_callbacks, self));
    ESP_ERROR_CHECK(i2s_channel_enable(self->i2s_chan_handle));
}

static machine_i2s_obj_t *mp_machine_i2s_make_new_instance(mp_int_t i2s_id) {
    if (i2s_id < 0 || i2s_id >= I2S_NUM_AUTO) {
        mp_raise_ValueError(MP_ERROR_TEXT("invalid id"));
    }

    machine_i2s_obj_t *self;
    if (MP_STATE_PORT(machine_i2s_obj)[i2s_id] == NULL) {
        self = mp_obj_malloc_with_finaliser(machine_i2s_obj_t, &machine_i2s_type);
        MP_STATE_PORT(machine_i2s_obj)[i2s_id] = self;
        self->i2s_id = i2s_id;
    } else {
        self = MP_STATE_PORT(machine_i2s_obj)[i2s_id];
        machine_i2s_deinit(self);
    }

    return self;
}

static void mp_machine_i2s_deinit(machine_i2s_obj_t *self) {
    if (!self->is_deinit) {
        ESP_ERROR_CHECK(i2s_channel_disable(self->i2s_chan_handle));
        ESP_ERROR_CHECK(i2s_channel_register_event_callback(self->i2s_chan_handle, &i2s_callbacks_null, self));
        ESP_ERROR_CHECK(i2s_del_channel(self->i2s_chan_handle));

        if (self->non_blocking_mode_task != NULL) {
            vTaskDelete(self->non_blocking_mode_task);
            self->non_blocking_mode_task = NULL;
        }

        if (self->non_blocking_mode_queue != NULL) {
            vQueueDelete(self->non_blocking_mode_queue);
            self->non_blocking_mode_queue = NULL;
        }
        self->is_deinit = true;
    }
}
